added getResearcherStudents endpoint and docs
