# backend/src/routes/user.routes.ts
@@ -1,12 +1,14 @@
 import { Router } from 'express'
 import userController from '../controllers/user.controller'
 import { isAuthenticated } from '../middlewares/jwt.middleware'
-import { isAdmin } from '../middlewares/role.middleware'
+import { isAdmin, isResearcher } from '../middlewares/role.middleware'
 
 const router = Router()
 
 router.get('/', isAuthenticated, isAdmin, userController.getUsers)
 router.post('/', isAuthenticated, isAdmin, userController.createUser)
+
+router.get('/students', isAuthenticated, isResearcher, userController.getResearcherStudentsWithAcademicProgram)
 
 router.get('/:id', isAuthenticated, userController.getUser)
 router.put('/:id', isAuthenticated, isAdmin, userController.updateUser)
