# backend/src/types/Users.ts
@@ -1,4 +1,4 @@
-import { Roles, Users } from '../generated/client'
+import { Prisma, Roles, Users } from '../generated/client'
 import { AcademicProgramAsResearcher, AcademicProgramAsStudent } from './AcademicProgram'
 
 export type SafeUser = Omit<Users, 'password' | 'role_id' | 'profile_photo' | 'photo_mime_type'> & {
@@ -10,3 +10,16 @@ export type SafeUser = Omit<Users, 'password' | 'role_id' | 'profile_photo' | 'p
 export type NewUser = Omit<Users, 'user_id'>
 
 export type UserProfilePhoto = Pick<Users, 'profile_photo' | 'photo_mime_type'>
+
+const studentInProgram = Prisma.validator<Prisma.UsersDefaultArgs>()({
+  select: {
+    name: true,
+    second_name: true,
+    paternal_lastname: true,
+    maternal_lastname: true,
+    identifier: true,
+    institutional_email: true
+  }
+})
+
+export type StudentInProgram = Prisma.UsersGetPayload<typeof studentInProgram>
